--- a/about.qmd
+++ b/about.qmd
@@ -2,8 +2,8 @@
 title: "Programa de trabajo"
 ---
 
-
 El programa de trabajo se puede consultar acá
 
+<iframe src="./plan_ac2023-2.pdf" title="Plan de Trabajo" width="960" height="500">
 
-<iframe src="./plan_ac2023-2.pdf" title="Plan de Trabajo" width="960" height="500"></iframe>
+</iframe>
