--- a/P2.qmd
+++ b/P2.qmd
@@ -6,16 +6,17 @@ title: "Taller 2"
 
 Los paquetes los podemos instalar ya sea en el menú de paquetes en la ventana del lado derecho inferior (si tienes la configuración original) o podemos hacerlo por comandos. 
 
-[Paso1](ima/paquete1.png)
+![Paso1](ima/paquete1.png)
 
-[Paso2](ima/paquete2.png)
+![Paso2](ima/paquete2.png)
 
-[Paso3](ima/paquete3.png)
+![Paso3](ima/paquete3.png)
 
 Y se verá algo así en la consola
 
-[Paso4](ima/paquete4.png)
-Esto es igual que instalemos los paquetes con comandos
+"[Paso4](ima/paquete4.png)
+
+Esto es igual que instalemos los paquetes con comandos:
 
 ```
 install.packages("janitor", dependencies = TRUE)
