--- a/P2.qmd
+++ b/P2.qmd
@@ -4,7 +4,7 @@ title: "Taller 2"
 
 ## Paquetes
 
-Los paquetes los podemos instalar ya sea en el menú de paquetes en la ventana del lado derecho inferior (si tienes la configuración original) o podemos hacerlo por comandos. 
+Los paquetes los podemos instalar ya sea en el menú de paquetes en la ventana del lado derecho inferior (si tienes la configuración original) o podemos hacerlo por comandos.
 
 ![Paso1](ima/paquete1.png)
 
@@ -18,17 +18,15 @@ Y se verá algo así en la consola
 
 Esto es igual que instalemos los paquetes con comandos:
 
-```
-install.packages("janitor", dependencies = TRUE)
-```
+    install.packages("janitor", dependencies = TRUE)
 
 Después de instalados los paquetes o los palomeamos o los cargamos con un comando
+
 ```{r}
 library(janitor)
 ```
 
-Esto ya nos permite utilizarlos, es decir las funciones o comandos que vienen en ellos, ya pueden ser utilizados. Cargar los paquetes es una operación que se tiene que hacer en cada sesión (cuando abrimos) el programa R o RStudio. La instalación sólo se hace una vez. 
-
+Esto ya nos permite utilizarlos, es decir las funciones o comandos que vienen en ellos, ya pueden ser utilizados. Cargar los paquetes es una operación que se tiene que hacer en cada sesión (cuando abrimos) el programa R o RStudio. La instalación sólo se hace una vez.
 
 ## Paquete `{pacman}`
 
@@ -44,12 +42,9 @@ pacman::p_load(tidyverse, readxl, writexl, haven, sjlabelled, pollster) #carga l
 
 Hay muchos formatos de almacenamiento de bases de datos. Vamos a aprender a importar información desde ellos.
 
-
 ## Datos para el curso
 
-Estos los puedes descargar desde el repo de la clase que hizo la profe
-<https://github.com/FCPyS/ac2023/tree/main/datos>
-
+Estos los puedes descargar desde el repo de la clase que hizo la profe <https://github.com/FCPyS/ac2023/tree/main/datos>
 
 ### Desde Excel
 
@@ -94,14 +89,15 @@ Checa que en todas las exportaciones en los nombres hay que incluir **la extensi
 
 Este es un paquete que no está en CRAN, necesitamos instalarlo desde su repositorio de github <https://github.com/vdeminstitute/vdemdata>
 
-
 ```{r}
 # install.packages("remotes")
 remotes::install_github("vdeminstitute/vdemdata")
 ```
+
 Si aparece que debemos instalar o actualizar algún paquete, pondemo 1: ALL en la consola
 
 Luego lo cargamos
+
 ```{r}
 library(vdemdata)
 ```
@@ -111,8 +107,6 @@ Con esto podemos llamar diferentes bases de las variedades de la democracia <htt
 ```{r}
 data(vdem)
 ```
-
-
 
 ## Revisión de nuestra base
 
@@ -142,7 +136,6 @@ lapop2021 %>%
 ```
 
 Para la de "vdem"
-
 
 ```{r}
 vdem |> # este esl pipe nativo, funciona igual 
@@ -180,47 +173,3 @@ lapop2021 %>%
 ```
 
 
-### Ojeando
-
-```{r}
-dplyr::glimpse(lapop2021)
-dplyr::glimpse(lapop2021[,20:30]) # en corchete del lado derecho podemos ojear columnas 
-
-```
-
-Podemos hacer un tipo "labelbook", usando una función que viene de la librería "sjlabelled", "get_labels". Funciona para toda la base o para columnas, o para variables.
-
-```{r}
-#print(get_labels(lapop2021)) #todas
-print(get_labels(lapop2021[, 20:30])) #de las segundas 10 variables
-```
-
-
-En singular nos da las etiquetas de las variables, no de los valores:
-
-```{r}
-#print(get_label(lapop2021)) #todas
-print(get_label(lapop2021[, 1:10])) #de las primeras 10 variables
-print(get_label(lapop2021$q2)) #
-```
-
-### Selección de casos y de variables
-
-Poco a poco vamos comprendiendo más la lógica de R. Hay varias "formas" de programar. Por lo que no te asustes si varios códigos llegan al mismo resultado
-
-Para revisar el contenido de un data frame podemos usar, como lo hicimos anteriormente, el formato basededatos\$var o usar corchete, checa como estas cuatro formas tan el mismo resultado.
-
-```{r}
-x<-lapop2021$ing_cor
-x<-lapop2021[["q2"]]  # ¡Ojo con las comillas! 
-x<-lapop2021[,13]
-x<-lapop2021[,"q2"]
-
-```
-
-Ahora, con el formato de dplyr podemos llegar a lo mismo
-
-```{r}
-x<-lapop2021 %>% 
-  select(q2)
-```
